force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/QTB_S26_RS256_JWT__mdt.object-meta.xml
<CustomObject>
    <description>Capture Firebase parameters to generate Access Token for Sierra26 Line of Business.</description>
    <label>RS256 JWT</label>
    <pluralLabel>RS256 JWT</pluralLabel>
</CustomObject>