force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Alg__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Alg__c</fullName>
    <description>Captures Message authentication code algorithm</description>
    <label>Alg</label>
    <length>10</length>
    <type>Text</type>
</CustomField>