force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Aud__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Aud__c</fullName>
    <description>Captures Audience</description>
    <label>Aud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>