force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Iss__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Iss__c</fullName>
    <description>Captures Issuer</description>
    <label>Iss</label>
    <length>100</length>
    <type>Text</type>
</CustomField>