force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_JWTToken__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_JWTToken__c</fullName>
    <label>JWTToken</label>
    <length>92768</length>
    <type>LongTextArea</type>
</CustomField>