force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Kid__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Kid__c</fullName>
    <description>Captures Key ID</description>
    <label>Kid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>