force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Private_Key__c</fullName>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>