force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Sub__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Sub__c</fullName>
    <description>Captures Subject</description>
    <label>Sub</label>
    <length>100</length>
    <type>Text</type>
</CustomField>