force-app/main/default/objects/QTB_S26_RS256_JWT__mdt/fields/QTB_S26_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_S26_Type__c</fullName>
    <description>Captures token type</description>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>